syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.tu.tictactoe.android.io";
option java_outer_classname = "DisplayWriterProto";

service DisplayWriter {

    rpc write_grid(google.protobuf.Empty) returns (google.protobuf.Empty) {}

    rpc clear_cell_at(Coordinate) returns (google.protobuf.Empty) {}

    rpc write_symbol(WriteIconMessage) returns (google.protobuf.Empty) {}

    rpc write_placeholder_for(WriteIconMessage) returns (google.protobuf.Empty) {}

    rpc write_stroke(WriteStrokeMessage) returns (google.protobuf.Empty) {}

    rpc write_msg(TextMessage) returns (google.protobuf.Empty) {}

    rpc write_temp_msg(TextMessage) returns (google.protobuf.Empty) {}

    rpc flash_placeholder(WriteIconMessage) returns (google.protobuf.Empty) {}
}

enum StrokeDirection {
    DOWN = 1;
    ACROSS = 2;
    DIAGONAL_LEFT = 3;
    DIAGONAL_RIGHT = 4;
}

enum Symbol {
    CIRCLE = 1;
    CROSS = 2;
}

message WriteIconMessage {
    required Symbol symbol = 1;
    required Coordinate coord = 2;
}

message WriteStrokeMessage {
    required Coordinate coord = 1;
    required StrokeDirection stroke_dir = 2;
}

message TextMessage {
    required string value = 1;
}
